--- a/package.json
+++ b/package.json
@@ -1,8 +1,10 @@
 {
   "name": "next-pages-template",
+  "homepage": "https://seleems.github.io/thepotcastproductions",
   "version": "0.1.0",
   "private": true,
   "scripts": {
+    "deploy": "gh-pages -d out",
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
@@ -28,5 +30,8 @@
     "tailwind-variants": "^0.1.18",
     "tailwindcss": "3.3.5",
     "typescript": "5.0.4"
+  },
+  "devDependencies": {
+    "gh-pages": "^6.1.0"
   }
 }
