--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "deploy": "gh-pages -d out",
     "dev": "next dev",
     "build": "next build",
+    "export": "next export",
     "start": "next start",
     "lint": "next lint"
   },
