--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "postcss": "8.4.31",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-ga": "^3.3.1",
     "react-icons": "^4.12.0",
     "tailwind-variants": "^0.1.18",
     "tailwindcss": "3.3.5",
