Updating package.json

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "next-pages-template",
-  "homepage": "https://seleems.github.io/thepotcastproductions",
+  "name": "the-potcast-productions",
+  "homepage": "https://www.thepotcastproductions.com/",
   "version": "0.1.0",
   "private": true,
   "scripts": {
