--- a/package.json
+++ b/package.json
@@ -22,9 +22,11 @@
     "clsx": "^2.0.0",
     "eslint": "8.48.0",
     "eslint-config-next": "13.4.19",
+    "formidable": "^3.5.1",
     "intl-messageformat": "^10.5.0",
     "next": "13.4.19",
     "next-themes": "^0.2.1",
+    "nodemailer": "^6.9.8",
     "postcss": "8.4.31",
     "react": "18.2.0",
     "react-dom": "18.2.0",
@@ -35,6 +37,8 @@
     "typescript": "5.0.4"
   },
   "devDependencies": {
+    "@types/formidable": "^3.4.5",
+    "@types/nodemailer": "^6.4.14",
     "gh-pages": "^6.1.0"
   }
 }
